# vk-to-tgm

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SSL.md  docker-compose.debug.yml  docker-compose.local.yml  docker-compose.ssl.yml  docker-compose.yml  functions.sh  install.sh  pyproject.toml  renovate.json  requirements.txt  setup.cfg  uninstall.sh  vk-to-tgm.code-workspace  vtt-cli.sh
.github/: dependabot.yml
.github/workflows/: bumpversion.yml  pr.yml  sync-locks.yml  update-hooks.yml
app/: celery_worker.py  celeryconfig.py.example  config.py  gunicorn_worker.py  logging_config.yaml  main.py  sign_in.py
app/bot/: main.py  state_manager.py
app/bot/plugins/: __init__.py  common.py  playlist.py  wall.py
app/handlers/: playlist.py  text.py  wall.py
app/schemas/: vk.py
app/utils/: database.py  downloader.py  telegram.py  vk.py
libs/vtt_common/: pyproject.toml
libs/vtt_common/vtt_common/: celeryconfig.py  proxy.py  schemas.py  tasks.py
locale/: base.pot
locale/en/LC_MESSAGES/: vtt.mo  vtt.po
locale/ru/LC_MESSAGES/: vtt.mo  vtt.po
nginx/: 0-change-default-conf.sh  40-ssl-setup.sh  Dockerfile  default.conf.template
nginx/ssl/: .gitignore  client-ssl.conf  default-ssl.conf.template  renew.sh
projects/cb_receiver/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  package-lock.json  pyproject.toml
projects/cb_receiver/app/: config.py  logging.py  main.py  schemas.py  utils.py  worker.py
projects/cb_receiver/tests/: conftest.py  test_integration.py  test_main.py  utils.py
projects/cb_receiver/tunnel/: index.js  package-lock.json  package.json
projects/env_helper/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
projects/env_helper/app/: config.py  main.py  prompt.py  settings_manager.py
projects/env_helper/app/tgm/: __init__.py  auth.py  channel.py
projects/env_helper/app/vk/: __init__.py  auth.py  community.py  exception.py  models.py
projects/env_helper/app/vtt/: __init__.py  options.py  ssl.py
projects/env_helper/tests/: conftest.py  test_main.py
projects/env_validator/: .gitignore  Dockerfile  Makefile  pyproject.toml
projects/env_validator/app/: config.py  main.py  syncify.py
projects/env_validator/tests/: conftest.py  test_main.py
projects/tgm_bot/: Dockerfile  Makefile  pyproject.toml
projects/tgm_bot/app/: config.py  logging.py  main.py  state_manager.py  utils.py  worker.py
projects/tgm_bot/app/plugins/: __init__.py  common.py  playlist.py  wall.py
projects/tgm_bot/app/vk/: api.py  request_validators.py
projects/tgm_bot/locales/: base.pot
projects/tgm_bot/locales/en/LC_MESSAGES/: tgm_bot.mo  tgm_bot.po
projects/tgm_bot/locales/ru/LC_MESSAGES/: tgm_bot.mo  tgm_bot.po
projects/worker/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
projects/worker/app/: config.py  decorators.py  exceptions.py  main.py  worker.py
projects/worker/app/services/: downloader.py  tgm.py  vk.py
projects/worker/app/vk/: request_validators.py  schemas.py
projects/worker/app/vtt/: attachments.py  schemas.py
projects/worker/app/vtt/factories/: message.py  playlist.py  text.py
projects/worker/locales/: base.pot
projects/worker/locales/en/LC_MESSAGES/: worker.mo  worker.po
projects/worker/locales/ru/LC_MESSAGES/: worker.mo  worker.po
projects/worker_wall/: .gitignore  Dockerfile  Makefile  pyproject.toml
projects/worker_wall/app/: config.py
projects/worker_wall/app/services/: vk.py
projects/worker_wall/app/vtt/: attachments.py
projects/worker_wall/app/vtt/factories/: message.py
projects/worker_wall/locales/: base.pot
projects/worker_wall/locales/en/LC_MESSAGES/: worker_wall.mo  worker_wall.po
projects/worker_wall/locales/ru/LC_MESSAGES/: worker_wall.mo  worker_wall.po
setup/configs/: vtt-celery.conf
setup/nginx/: vtt-cb-receiver.conf
setup/ssl/: README.md  renew.sh
setup/systemd/: vtt-cb-receiver.service  vtt-dbc-scheduler.service  vtt-tgm-bot.service  vtt-workers.service
tunnel/: app.js  package-lock.json  package.json
