[project]
name = "vtt_common"
version = "0.1.0"
description = ""
authors = [{ name = "Ilia Boyazitov" }]
requires-python = ">=3.14,<4"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "loguru>=0.7.3,<0.8",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.1,<3",
    "python-dotenv>=1.2.2,<2",
    "python-socks[asyncio]>=2.8.1,<3",
]

[project.optional-dependencies]
vk = [
    "vkbottle>=4.9.0,<5"
]
tgm = [
    "telethon>=1.43.2,<2",
    "cryptg>=0.6.0,<0.7",
    "pillow>=12.2.0,<13"
]
celery = [
    "celery[redis]>=5.6.3,<6"
]
test = [
    "mypy>=2.1.0,<3",
    "ruff>=0.15.14,<0.16",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "pytest-mock>=3.15.1,<4",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-socket>=0.8.0,<0.9",
    "aioresponses>=0.7.8,<0.8",
]

[tool.uv.build-backend]
module-name = ["vtt_common"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"


[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",     # pydocstyle: undocumented-public-module
    "D101",     # pydocstyle: undocumented-public-class
    "D102",     # pydocstyle: undocumented-public-method
    "D103",     # pydocstyle: undocumented-public-function
    "D104",     # pydocstyle: undocumented-public-package
    "D105",     # pydocstyle: undocumented-magic-method
    "D106",     # pydocstyle: undocumented-public-nested-class
    "D107",     # pydocstyle: undocumented-public-init
    "D203",     # pydocstyle: one-blank-line-before-class
    "D213",     # pydocstyle: multi-line-summary-second-line
    "ANN002",   # flake8-annotations: missing-type-args
    "ANN003",   # flake8-annotations: missing-type-kwargs
    "ANN101",   # flake8-annotations: missing-type-self
    "ANN102",   # flake8-annotations: missing-type-cls
    "TRIO",     # flake8-trio
    "FBT001",   # flake8-boolean-trap: boolean-type-hint-positional-argument
    "DJ",       # flake8-django
    "EM",       # flake8-errmsg
    "TD002",    # flake8-todos: missing-todo-author
    "TD003",    # flake8-todos: missing-todo-link
    "FIX",      # flake8-fixme
    "PD",       # pandas-vet
    "PLR0911",  # pylint: too-many-return-statements
    "PLR0913",  # pylint: too-many-arguments
    "TRY003",   # tryceratops: raise-vanilla-args
    "NPY",      # numpy
    "AIR",      # airflow
    "RUF001",   # ruff: ambiguous-unicode-character-string
    "RUF002",   # ruff: ambiguous-unicode-character-docstring
    "RUF003",   # ruff: ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",     # flake8-bandit: assert
    "SLF001",   # flake8-self: private-member-access
    "PLR2004"   # pylint: magic-value-comparison
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
