[project]
name = "cb-receiver"
version = "0.1.0"
description = "Service that receives messages from VK Callback API"
authors = [{ name = "Ilia Boyazitov" }]
requires-python = ">=3.14,<4"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.136.1,<0.137",
    "vkbottle>=4.8.2,<5",
    "loguru>=0.7.3,<0.8",
    "celery[redis]>=5.6.3,<6",
    "python-dotenv>=1.2.2,<2",
    "pydantic-settings>=2.14.1,<3",
    "uvicorn[standard]>=0.46.0,<0.47",
    "vtt_common",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3",
    "ruff>=0.15.12,<0.16",
    "commitizen>=4.16.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "httpx>=0.28.1,<0.29",
    "pytest-socket>=0.7.0,<0.8",
    "aioresponses>=0.7.8,<0.8",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-celery>=1.3.0,<2",
    "pytest-mock>=3.15.1,<4",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
vtt_common = { path = "../../libs/vtt_common", editable = true }

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"


[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]
strict = true

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",     # pydocstyle: undocumented-public-module
    "D101",     # pydocstyle: undocumented-public-class
    "D102",     # pydocstyle: undocumented-public-method
    "D103",     # pydocstyle: undocumented-public-function
    "D104",     # pydocstyle: undocumented-public-package
    "D105",     # pydocstyle: undocumented-magic-method
    "D106",     # pydocstyle: undocumented-public-nested-class
    "D107",     # pydocstyle: undocumented-public-init
    "D203",     # pydocstyle: one-blank-line-before-class
    "D213",     # pydocstyle: multi-line-summary-second-line
    "ANN002",   # flake8-annotations: missing-type-args
    "ANN003",   # flake8-annotations: missing-type-kwargs
    "FBT001",   # flake8-boolean-trap: boolean-type-hint-positional-argument
    "DJ",       # flake8-django
    "EM",       # flake8-errmsg
    "TD002",    # flake8-todos: missing-todo-author
    "TD003",    # flake8-todos: missing-todo-link
    "FIX",      # flake8-fixme
    "PD",       # pandas-vet
    "PLE1205",  # pylint: logging-too-many-args
    "PLR0911",  # pylint: too-many-return-statements
    "PLR0913",  # pylint: too-many-arguments
    "TRY003",   # tryceratops: raise-vanilla-args
    "NPY",      # numpy
    "AIR",      # airflow
    "RUF001",   # ruff: ambiguous-unicode-character-string
    "RUF002",   # ruff: ambiguous-unicode-character-docstring
    "RUF003",   # ruff: ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",     # flake8-bandit: assert
    "SLF001",   # flake8-self: private-member-access
    "PLR2004"   # pylint: magic-value-comparison
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--disable-socket",
    "--allow-unix-socket"
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
