[tool.poetry]
package-mode = false
name = "tgm-bot"
version = "0.1.0"
description = "Telegram bot"
authors = ["Ilia Boyazitov"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.34.0"
vtt_common = {path = "../../libs/vtt_common", develop = true}
loguru = "^0.7.2"
vkbottle = "^4.3.12"
pydantic = "<2.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.7"
commitizen = "^3.22.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
